--- a/cit270-authentication-service/package.json
+++ b/cit270-authentication-service/package.json
@@ -9,6 +9,7 @@
   "author": "Dillan Rawlings",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.1",
     "express": "^4.17.2"
   }
 }
