--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "express": "^4.17.2",
-    "jest": "^27.4.7"
+    "body-parser": "^1.19.2",
+    "express": "^4.17.3",
+    "jest": "^27.4.7",
+    "mongoose": "^6.2.9"
   }
 }
